--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,14 @@ dependencies = [
     "faiss-cpu>=1.12.0",
     "numpy>=2.2.6",
     "dashscope>=1.24.6",
+    "pytest>=8.4.2",
+]
+
+[tool.pytest.ini_options]
+pythonpath = ["."]
+testpaths = ["tests"]
+
+filterwarnings = [
+  "ignore:.*SwigPy.*:DeprecationWarning",
+  "ignore:.*no __module__ attribute:DeprecationWarning",
 ]
