--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "numpy>=2.2.6",
     "dashscope>=1.24.6",
     "pytest>=8.4.2",
+    "openai>=2.3.0",
 ]
 
 [tool.pytest.ini_options]
